--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
       <artifactId>jackson-databind-nullable</artifactId>
       <version>${jackson-databind-nullable.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
