Configure springdoc to use custom spec

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,10 @@ spring:
 logging:
   level:
     root: INFO
+springdoc:
+  api-docs:
+    enabled: false
+    path: '/openapi.yml'
+    swagger-ui:
+      config-url: '/openapi.yml'
+      url: '/openapi.yml'
