--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 	<properties>
 		<cucumber-bom.version>7.11.1</cucumber-bom.version>
 		<java.version>17</java.version>
-    <springdoc-openapi-webflux-ui.version>1.6.15</springdoc-openapi-webflux-ui.version>
     <swagger-annotations.version>1.6.9</swagger-annotations.version>
     <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
     <archunit-junit5.version>1.0.1</archunit-junit5.version>
+    <springdoc-openapi-starter-webflux-ui.version>2.0.4</springdoc-openapi-starter-webflux-ui.version>
   </properties>
 	<dependencies>
 		<dependency>
@@ -33,8 +33,12 @@
 		</dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-webflux-ui</artifactId>
-      <version>${springdoc-openapi-webflux-ui.version}</version>
+      <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+      <version>${springdoc-openapi-starter-webflux-ui.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -136,7 +140,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <inputSpec>${project.basedir}/docs/specs/openapi/openapi.yml</inputSpec>
+              <inputSpec>${project.basedir}/src/main/resources/public/openapi.yml</inputSpec>
               <templateDirectory>${project.basedir}/src/main/resources/response-wrapping-fix</templateDirectory>
 
               <generatorName>spring</generatorName>
@@ -175,6 +179,10 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
 	</build>
