Adds Openapi contract testing

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
     <archunit-junit5.version>1.0.1</archunit-junit5.version>
     <springdoc-openapi-starter-webflux-ui.version>2.0.4</springdoc-openapi-starter-webflux-ui.version>
+    <swagger-request-validator-core.version>2.34.0</swagger-request-validator-core.version>
   </properties>
 	<dependencies>
 		<dependency>
@@ -102,6 +103,16 @@
       <artifactId>archunit-junit5</artifactId>
       <scope>test</scope>
       <version>${archunit-junit5.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.atlassian.oai</groupId>
+      <artifactId>swagger-request-validator-core</artifactId>
+      <version>${swagger-request-validator-core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.atlassian.oai</groupId>
+      <artifactId> swagger-request-validator-spring-web-client</artifactId>
+      <version>${swagger-request-validator-core.version}</version>
     </dependency>
   </dependencies>
 
